# dom-web-component

./: CLAUDE.md  Cargo.toml  README.md  index.html  index.scss
src/: lib.rs  main.rs  mod.rs  video_thumbnail.rs
src/components/: mod.rs
src/components/atoms/: dancer.rs  mod.rs
src/components/molecules/: video_list.rs
src/pages/: choreo_page.rs  choreography_page.rs  dancer_page.rs  main_page.rs  mod.rs
src/pages/sub_page/: info_choreo_page.rs  mod.rs
