[package]
name = "dom-web-component"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.23", features = ["csr"] }
yew-router = "0.20.0"
wasm-bindgen = "0.2.90"
web-sys = { version = "0.3.103", features = [
    "Element",
    "HtmlElement",
    "DomTokenList",
    "SvgElement",
    "Window",
    "Storage",
    "Document",
    "CssStyleDeclaration",
    "HtmlVideoElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Url",
    "DragEvent",
    "DataTransfer",
    "FileList",
    "HtmlTextAreaElement",
    "HtmlSelectElement",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4.76"
